syntax = "proto3";

package proto;

message Error
{
    uint32 ErrorCode   = 1;
    string Reason      = 2;
}
