syntax = "proto3";

package proto;

message GitSignature
{
    string Name     = 1;
    string Email    = 2;
    string Time     = 3;
}

message GitCommit
{
    repeated string ParentId    = 1;
    GitSignature    Author      = 2;
    GitSignature    Committer   = 3;
    string          Message     = 4;
    string          TreeId      = 5;
}

message GitTreeEntry
{
    string  Id          = 1;
    string  Name        = 2;
    string  Type        = 3;
    int32   Filemode    = 4;
}

message GitTree
{
    string                  Id          = 1;
    repeated GitTreeEntry   Entries     = 2;
}
